--- a/fly.toml
+++ b/fly.toml
@@ -22,6 +22,14 @@ primary_region = "lax"
   min_machines_running = 0
   processes = ["app"]
 
+[[http_service.checks]]
+  grace_period = "10s"
+  interval = "30s"
+  method = "GET"
+  timeout = "5s"
+  path = "/healthcheck"
+  protocol = "http"
+
 [[vm]]
   cpu_kind = "shared"
   cpus = 1
