--- a/fly.toml
+++ b/fly.toml
@@ -17,18 +17,10 @@ primary_region = "lax"
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = true
-  auto_start_machines = true
-  min_machines_running = 0
+  auto_stop_machines = false
+  auto_start_machines = false
+  min_machines_running = 1
   processes = ["app"]
-
-[[http_service.checks]]
-  grace_period = "10s"
-  interval = "30s"
-  method = "GET"
-  timeout = "5s"
-  path = "/healthcheck"
-  protocol = "http"
 
 [[vm]]
   cpu_kind = "shared"
